# Coupe2025-PAMI

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/PAMI/: control.c  idle_arduino.hpp  pami_settings.h  pathing.c  pathing.h  stepper.cpp
src/display/: visual.c  visual.h
